--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,12 @@
 *::selection{
   background:deepskyblue;
   color:#fff;
+  
 }
 
 html{
   font-size: 62.5%;
   overflow-x: hidden;
-  scroll-padding-top: 6rem;
-  scroll-behavior: smooth;
 }
 
 section{
@@ -57,13 +56,13 @@ section{
 }
 
 .btn:hover{
-  background:rgba(255, 165, 0,.2);
+  background:white;
   color:blue;
 }
 
 header{
   position: fixed;
-  top:0; left: 0; right:0;
+ top:0; left: 0; right:0;
   background:deepskyblue;
   z-index: 1000;
   display: flex;
@@ -79,9 +78,6 @@ header .logo{
   text-transform: uppercase;
 }
 
-header .logo span{
-  color:var(--orange);
-}
 
 header .navbar a{
   color:#fff;
@@ -90,7 +86,7 @@ header .navbar a{
 }
 
 header .navbar a:hover{
-  color:var(--orange);
+  color:red;
 }
 
 #menu-bar{
@@ -121,14 +117,14 @@ header .navbar a:hover{
   font-size: 5.5rem;
   color:white;
   text-transform: uppercase;
-  text-shadow: 0 .3rem .5rem rgba(0,0,0,.1);
+
 }
 
 .home .content h3{
   font-size: 4.5rem;
   color:white;
   text-transform: uppercase;
-  text-shadow: 0 .3rem .5rem rgba(0,0,0,.1);
+ 
 }
 
 .home .content p{
@@ -153,7 +149,6 @@ header .navbar a:hover{
 .reviewe .boxe{
   padding:2rem;
   text-align: center;
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
   border-radius: .5rem;
 }
 
@@ -178,13 +173,13 @@ header .navbar a:hover{
 
 .book .row{
   display: flex;
-  flex-wrap: wrap;
+ /* flex-wrap: wrap;*/
   gap:1.5rem;
   align-items: center;
 }
 
 .book .row .image{
-  flex:1 1 40rem;
+   flex:1 1 40rem;
 }
 
 .book .row .image img{
@@ -194,7 +189,7 @@ header .navbar a:hover{
 .book .row form{
   flex:1 1 40rem;
   padding:2rem;
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+  /*box-shadow: 0 1rem 2rem rgba(0,0,0,.1);*/
   border-radius: .5rem;
 }
 
@@ -245,9 +240,9 @@ header .navbar a:hover{
   color:#333;
 }
 
-.packages .box-container .box .content h3 i{
+/*.packages .box-container .box .content h3 i{
   color:var(--orange);
-}
+}*/
 
 .packages .box-container .box .content p{
   font-size:1.7rem;
@@ -257,7 +252,7 @@ header .navbar a:hover{
 
 .packages .box-container .box .content .stars i{
   font-size:1.7rem;
-  color:var(--orange);
+  /*color:var(--orange);*/
 }
 
 .packages .box-container .box .content .price{
@@ -288,7 +283,7 @@ header .navbar a:hover{
 .services .box-container .box i{
   padding:1rem;
   font-size: 5rem;
-  color:var(--orange);
+ 
 }
 
 .services .box-container .box h3{
@@ -345,7 +340,7 @@ header .navbar a:hover{
 
 .gallery .box-container .box .content h3{
   font-size: 2.5rem;
-  color:var(--orange);
+ 
 }
 
 .gallery .box-container .box .content p{
@@ -354,18 +349,18 @@ header .navbar a:hover{
   padding:.5rem 0;
 }
 
-.review .review-slider{
+/*.review .review-slider{
   padding-bottom: 2rem;
 }
-
+/*
 .review .box{
   padding:2rem;
   text-align: center;
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-  border-radius: .5rem;
-}
+  /*box-shadow: 0 1rem 2rem rgba(0,0,0,.1);*/
+ /* border-radius: .5rem;
+}*/
 
-.review .box img{
+/*.review .box img{
   height:13rem;
   width:13rem;
   border-radius: 50%;
@@ -385,10 +380,10 @@ header .navbar a:hover{
 }
 
 .review .box .stars i{
-  color:var(--orange);
+  
   font-size: 1.7rem;
 }
-
+*/
 .contact .row{
   display: flex;
   flex-wrap: wrap;
@@ -453,7 +448,7 @@ header .navbar a:hover{
 }
 
 .footer .box-container .box h3{
-  font-size: 2.5rem;
+  font-size: 20px;
   padding:.7rem 0;
   color:#fff;
 }
@@ -472,7 +467,7 @@ header .navbar a:hover{
 }
 
 .footer .box-container .box a:hover{
-  color:var(--orange);
+  /*color:var(--orange);*/
   text-decoration: underline;
 }
 
@@ -487,8 +482,74 @@ header .navbar a:hover{
 }
 
 .footer .credit span{
-  color:var(--orange);
+  /*color:var(--orange);*/
 }
 
 
 
+/* media queries  
+
+@media (max-width:1200px){
+
+  html{
+    font-size: 55%;
+  }
+
+}
+
+@media (max-width:991px){
+
+  header{
+    padding:2rem;
+  }
+
+  section{
+    padding:2rem;
+  }
+
+}
+
+@media (max-width:768px){
+
+  #menu-bar{
+    display: initial;
+  }
+
+  header .navbar{
+    position: absolute;
+    top:100%; right:0; left: 0;
+    background: #333;
+    border-top: .1rem solid rgba(255,255,255,.2);
+    padding:1rem 2rem;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+
+  header .navbar.active{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+
+  header .navbar a{
+    display: block;
+    border-radius: .5rem;
+    padding:1.5rem;
+    margin:1.5rem 0;    
+    background:#222;
+  }
+
+}
+
+@media (max-width:450px){
+
+  html{
+    font-size: 50%;
+  }
+
+  .heading span{
+    font-size: 2.5rem;
+  }
+
+  .contact .row form .inputBox input{
+    width:100%;
+  }
+
+}*/
